[tool.poetry]
name = "projeto-03"
version = "0.1.0"
description = "Projeto de análise de Dados utilizando algumas bibliotecas do python."
authors = ["Lucas-Brito-Dev <lucasbrito_dev@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
plotly = "^6.0.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
